<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/big_margin"
         app:cardElevation="@dimen/mid_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_color">

            <ImageView
                android:id="@+id/alarm_image"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_65sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/small_margin"
                android:scaleType="fitXY"
                android:src="@drawable/splash" />


            <TextView
                android:id="@+id/alarm_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/alarm_image"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/tiny_margin"
                android:layout_marginTop="@dimen/tiny_margin"
                android:layout_marginEnd="@dimen/tiny_margin"
                android:text="@string/there_is_no_alrets"
                android:textColor="@color/whitey"
                android:textSize="@dimen/_19sdp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/alarm_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/alarm_title"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:gravity="center"
                android:text="@string/weather_is_fine"
                android:textColor="@color/whitey"
                android:textSize="@dimen/small_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dismissButton"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_below="@id/alarm_des"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_shape_whity_color"
                android:gravity="center"
                android:text="@string/dismiss"
                android:textAllCaps="false"
                android:textColor="@color/main_color"
                android:textSize="20sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>